--- a/package.json
+++ b/package.json
@@ -2,19 +2,15 @@
   "name": "stem",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "gpt_test.js",
   "scripts": {
-    "dev": "nodemon main.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.18.2",
-    "openai": "^4.28.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.0"
+    "openai": "^4.28.4"
   }
 }
